# geodesy

./: .gitignore  CHANGELOG  CHANGELOG.md  CHANGES.md  Cargo.toml  HOWTO-RELEASE.md  LICENSE-MIT  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yml
assets/: pile.rs
assets/ellipsoids/: APL4.9.yml  CPM.yml  GRS67.yml  GRS80.yml  GSK2011.yml  IAU76.yml  MERIT.yml  NWL9D.yml  PZ90.yml  SEasia.yml  SGS85.yml  WGS60.yml  WGS66.yml  WGS72.yml  WGS84.yml  airy.yml  andrae.yml  aust_SA.yml  bess_nam.yml  bessel.yml  clrk66.yml  clrk80.yml  clrk80ign.yml  danish.yml  delmbr.yml  engelis.yml  evrst30.yml  evrst48.yml  evrst56.yml  evrst69.yml  evrstSS.yml  fschr60.yml  fschr60m.yml  fschr68.yml  generate_ellipsoid_files.awk  helmert.yml  hough.yml  intl.yml  kaula.yml  krass.yml  (+8 more)
assets/transformations/: ed50_etrs89.gys  geo.gys
comments/: 000-comment.md  001-comment.md  002-comment.md  003-comment.md
cookbook/transformations/: gis.gys
examples/: 00-transformations.rs  01-geometric_geodesy.rs  02-user_defined_macros.rs  03-user_defined_operators.rs  04-rotating_the_earth.rs  05-pq.rs  06-user_defined_coordinate_types_and_containers.rs  07-examples_from_ruminations.rs  08-user_defined_operators_using_proj.rs
geodesy/: README.md  test.datum  test.geoid  unigrid.grids  unigrid.index
geodesy/datum/: test_datum_with_subset_as_subgrid.datum  test_subset.datum
geodesy/deformation/: another_test.deformation  eur_nkg_nkgrf17vel.deformation  nkgrf17vel.deformation  test.deformation
geodesy/etc/: make_unigrid.cmd  nkg_random.py  timing.cmd
geodesy/geoid/: test_with_subgrid.geoid
geodesy/gsa/: egm96_15_subset.gsa
geodesy/gsb/: 5458.gsa  5458.gsb  5458_with_subgrid.gsa  5458_with_subgrid.gsb
geodesy/gtx/: README.md  egm96_15_subset.gtx
geodesy/macro/: stupid_way.macro
geodesy/macros/: macros.gys
geodesy/pile/: pile.gys  pilegenerator.c
geodesy/resources/: TM.md  X.md  nkg.collection  nkg.md  stupid.md  stupid.register
geodesy/timing/: make_unigrid.cmd  timing.cmd
ruminations/: 000-rumination.md  001-rumination.md  002-rumination.md  003-rumination.md  004-rumination.md  005-rumination.md  006-rumination.md  007-rumination.md  008-rumination.md  009-rumination.md  010-rumination.md  011-rumination.md  012-rumination.md  README.md
src/: bibliography.rs  context.rs  coordinates.rs  ellipsoids.rs  etc.rs  foundations.rs  gas.rs  inner_op.rs  lib.rs  op.rs  operand.rs  operator.rs  operatorargs.rs  operators.rs  parsed_parameters.rs  provider.rs  raw_parameters.rs  shuttle.rs  transformations.yml
src/attic/: lib.rs
src/attic/internals/: mod.rs
src/attic/operator/: cart.rs  lcc.rs  merc.rs
src/attic/resource/: grid.rs  gys.rs  minimal.rs  mod.rs  plain.rs
src/bibliography/: mod.rs
src/context/: gys.rs  minimal.rs  mod.rs  nygys.rs  parallel.rs  plain.rs  test.rs  user_defined.rs
src/coord/: conversions.rs  distances.rs  mod.rs
src/coordinate/: conversions.rs  coor2d.rs  coor32.rs  coor3d.rs  coor4d.rs  coord.rs  distances.rs  mod.rs  set.rs  tuple.rs
src/coordinate_set/: mod.rs
src/ellipsoid/: biaxial.rs  cartesians.rs  constants.rs  geocart.rs  geodesics.rs  gravity.rs  latitudes.rs  meridians.rs  mod.rs  triaxial.rs
src/etc/: mod.rs
src/grid/: gravsoft.rs  gsa.rs  gtx.rs  mod.rs  ntv2.rs  unigrid.rs
src/grid/ntv2/: README.md  mod.rs  parser.rs  subgrid.rs
src/inner_op/: adapt.rs  addone.rs  axisswap.rs  btmerc.rs  cart.rs  curvature.rs  deflection.rs  deformation.rs  etmerc.rs  geodesic.rs  gravity.rs  gravsoft.rs  gridshift.rs  helmert.rs  iso6709.rs  laea.rs  latitude.rs  lcc.rs  merc.rs  mod.rs  molodensky.rs  nmea.rs  noop.rs  omerc.rs  permtide.rs  pipeline.rs  proj.rs  pushpop.rs  somerc.rs  stack.rs  template.rs  tmerc.rs  unitconvert.rs  units.rs  webmerc.rs
src/math/: ancillary.rs  angular.rs  intersection.rs  jacobian.rs  mod.rs  series.rs
src/op/: mod.rs  op_descriptor.rs  parameter.rs  parsed_parameters.rs  raw_parameters.rs
src/operator/: adapt.rs  cart.rs  fit.rs  helmert.rs  lcc.rs  merc.rs  mod.rs  molodensky.rs  nmea.rs  noop.rs  pipeline.rs  tmerc.rs
src/operator_construction/: gas.rs  operatorargs.rs
src/operators/: badvalue.rs  cart.rs  helmert.rs  hulmert.rs  noop.rs  pipeline.rs  tmerc.rs
src/provider/: local.rs  minimal.rs  mod.rs  plain.rs
src/resource/: grid.rs  gys.rs  minimal.rs  mod.rs  plain.rs
src/token/: mod.rs
tests/: bar.aux  ed50_etrs89.gys  ed50_etrs89.yml  foo.aux  geo.gas  maximal.rs  tests.yml  ungeo.gas
tests/assets/expected/: bar.aux  foo.aux
tests/geodesy/pile/: bar.aux  foo.aux
