[package]
name = "geodesy"
description = "A platform for experiments with geodetic transformations and data flow"
keywords = ["geospatial", "geodesy", "cartography", "geography"]
categories = ["science"]
license = "MIT OR Apache-2.0"
version = "0.10.0"

authors = ["Thomas Knudsen <knudsen.thomas@gmail.com>"]
readme = "README.md"
repository = "https://github.com/busstoptaktik/geodesy/"
edition = "2021"

default-run = "kp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# Library functionality
uuid = { version = "1", features = ["v4"] }

# Command line program helpers
clap = { version = "3.1.18", features = ["derive"], optional = true }
simple_logger = {version = "1.13", optional = true }
anyhow = { version = "1.0", optional = true }

# CLI + plain
dirs = { version = "4.0", optional = true }

# Library level logging and error handling
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
# Needed for building doc-tests
anyhow = { version = "1.0" }

# Needed for building examples
clap = { version = "3.1.18", features = ["derive"] }
simple_logger = {version = "1.13" }
dirs = { version = "4.0" }

[lib]
name = "geodesy"

[features]
js = ["uuid/js"]
binary = ["dirs", "clap", "simple_logger", "anyhow"]
with_plain = ["dirs"]

[[bin]]
name = "kp"
required-features = ["binary"]
# Invocation example:
#   echo 55 12 | cargo run --features binary --bin kp -- "geo:in | utm zone=33"
# or (since kp is set as the default-run)
#   echo 55 12 | cargo run --features binary -- "geo:in | utm zone=33"
# Build example
#   cargo b --bin kp --features=with_plain,binary

[profile.release]
strip = true # Automatically strip symbols from the binary.
